Proyecto1OLC2/target/generated-sources/antlr4/com/mycompany/piglatin/PigLatinParser.java
// Generated from com/mycompany/piglatin/PigLatin.g4 by ANTLR 4.13.2
package com.mycompany.piglatin;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PigLatinParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, FINIS_PRINCIPAL=13, NUMERUS=14, TEXTUM=15, 
		DECIMALIS=16, LITTERA=17, ESTO=18, SERIES=19, VERUM=20, FALSUS=21, STRUCTURA=22, 
		SI=23, FINIS=24, ALITER=25, DUM=26, FACERE=27, PER=28, ACTIO=29, VARIABILES=30, 
		MUNERA=31, MAIOR=32, RATIO=33, REDDERE=34, NEGACION=35, BOOL=36, PERGE=37, 
		INTERRUMPE=38, NOVUS=39, IMPORT=40, SUMA=41, RESTA=42, MULTIPLICACION=43, 
		DIVISION=44, LEER_TEXTO=45, IMPRIMIR_TEXTO=46, IGUALDAD=47, DESIGUALDAD=48, 
		MENOR_QUE=49, MAYOR_QUE=50, MAYOR_IGUAL_QUE=51, MENOR_IGUAL_QUE=52, ASIGNACION=53, 
		AND=54, OR=55, SUMA_ABREVIADA=56, RESTA_ABREVIADA=57, ID=58, DECIMAL=59, 
		ENTERO=60, CARACTER=61, CADENA=62, ESPACIO=63, COMENTARIO_LINEA=64, COMENTARIO_MULTILINEA=65;
	public static final int
		RULE_programa = 0, RULE_importaciones = 1, RULE_path = 2, RULE_rutaCarpetas = 3, 
		RULE_nombreArchivo = 4, RULE_extensionArchivo = 5, RULE_defVariable = 6, 
		RULE_listaDeclaracion = 7, RULE_declaracionVariable = 8, RULE_declaracionDato = 9, 
		RULE_tipoDato = 10, RULE_datoPrimitivo = 11, RULE_objeto = 12, RULE_expresion = 13, 
		RULE_exprLogica = 14, RULE_exprRelacional = 15, RULE_exprAritmetica = 16, 
		RULE_termino = 17, RULE_factor = 18, RULE_valor = 19, RULE_exprEstructura = 20, 
		RULE_exprAccesoDatosObjeto = 21, RULE_metodoObjeto = 22, RULE_accesoArreglo = 23, 
		RULE_llamarFuncion = 24, RULE_argumentos = 25, RULE_declaracionArreglo = 26, 
		RULE_tipoArreglo = 27, RULE_inicializacionArreglo = 28, RULE_listaValores = 29, 
		RULE_asignacion = 30, RULE_declaracionObjeto = 31, RULE_defPrincipal = 32, 
		RULE_instrucciones = 33, RULE_sentencia = 34, RULE_sentenciaFuncionesEspeciales = 35, 
		RULE_leerConsola = 36, RULE_leerGuardar = 37, RULE_imprimir = 38, RULE_valorImprimir = 39, 
		RULE_sentenciaInstrucciones = 40, RULE_sentenciaSi = 41, RULE_condicionalSi = 42, 
		RULE_condicionalAliter = 43, RULE_condicionalSiNo = 44, RULE_ciclos = 45, 
		RULE_cicloDum = 46, RULE_condicionalDum = 47, RULE_cicloFacereDum = 48, 
		RULE_instruccionesFacere = 49, RULE_cicloPer = 50, RULE_condicionalPer = 51, 
		RULE_instruccionesCiclos = 52, RULE_sentenciaPerge = 53, RULE_sentenciaInterrumpe = 54, 
		RULE_retorno = 55, RULE_incremento = 56;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "importaciones", "path", "rutaCarpetas", "nombreArchivo", 
			"extensionArchivo", "defVariable", "listaDeclaracion", "declaracionVariable", 
			"declaracionDato", "tipoDato", "datoPrimitivo", "objeto", "expresion", 
			"exprLogica", "exprRelacional", "exprAritmetica", "termino", "factor", 
			"valor", "exprEstructura", "exprAccesoDatosObjeto", "metodoObjeto", "accesoArreglo", 
			"llamarFuncion", "argumentos", "declaracionArreglo", "tipoArreglo", "inicializacionArreglo", 
			"listaValores", "asignacion", "declaracionObjeto", "defPrincipal", "instrucciones", 
			"sentencia", "sentenciaFuncionesEspeciales", "leerConsola", "leerGuardar", 
			"imprimir", "valorImprimir", "sentenciaInstrucciones", "sentenciaSi", 
			"condicionalSi", "condicionalAliter", "condicionalSiNo", "ciclos", "cicloDum", 
			"condicionalDum", "cicloFacereDum", "instruccionesFacere", "cicloPer", 
			"condicionalPer", "instruccionesCiclos", "sentenciaPerge", "sentenciaInterrumpe", 
			"retorno", "incremento"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'.'", "'.z'", "'.y'", "':'", "';'", "'('", "')'", "'{'", "','", 
			"'}'", "'['", "']'", "'FINIS'", "'numerus'", "'textum'", "'decimalis'", 
			"'littera'", "'esto'", "'series'", "'verum'", "'falsus'", "'structura'", 
			"'si'", "'finis'", "'aliter'", "'dum'", "'facere'", "'per'", "'actio'", 
			"'VARIABILES'", "'MUNERA'", "'MAIOR'", "'ratio'", "'reddere'", "'non'", 
			"'bool'", "'perge'", "'interrumpe'", "'novus'", "'import'", "'+'", "'-'", 
			"'*'", "'/'", "'<<'", "'>>'", "'=='", "'!='", "'<'", "'>'", "'>='", "'<='", 
			"'='", "'&&'", "'||'", "'++'", "'--'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "FINIS_PRINCIPAL", "NUMERUS", "TEXTUM", "DECIMALIS", "LITTERA", 
			"ESTO", "SERIES", "VERUM", "FALSUS", "STRUCTURA", "SI", "FINIS", "ALITER", 
			"DUM", "FACERE", "PER", "ACTIO", "VARIABILES", "MUNERA", "MAIOR", "RATIO", 
			"REDDERE", "NEGACION", "BOOL", "PERGE", "INTERRUMPE", "NOVUS", "IMPORT", 
			"SUMA", "RESTA", "MULTIPLICACION", "DIVISION", "LEER_TEXTO", "IMPRIMIR_TEXTO", 
			"IGUALDAD", "DESIGUALDAD", "MENOR_QUE", "MAYOR_QUE", "MAYOR_IGUAL_QUE", 
			"MENOR_IGUAL_QUE", "ASIGNACION", "AND", "OR", "SUMA_ABREVIADA", "RESTA_ABREVIADA", 
			"ID", "DECIMAL", "ENTERO", "CARACTER", "CADENA", "ESPACIO", "COMENTARIO_LINEA", 
			"COMENTARIO_MULTILINEA"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PigLatin.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PigLatinParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public DefPrincipalContext defPrincipal() {
			return getRuleContext(DefPrincipalContext.class,0);
		}
		public TerminalNode FINIS_PRINCIPAL() { return getToken(PigLatinParser.FINIS_PRINCIPAL, 0); }
		public List<ImportacionesContext> importaciones() {
			return getRuleContexts(ImportacionesContext.class);
		}
		public ImportacionesContext importaciones(int i) {
			return getRuleContext(ImportacionesContext.class,i);
		}
		public DefVariableContext defVariable() {
			return getRuleContext(DefVariableContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(114);
				importaciones();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VARIABILES) {
				{
				setState(120);
				defVariable();
				}
			}

			setState(123);
			defPrincipal();
			setState(124);
			match(FINIS_PRINCIPAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportacionesContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(PigLatinParser.IMPORT, 0); }
		public PathContext path() {
			return getRuleContext(PathContext.class,0);
		}
		public ImportacionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importaciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterImportaciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitImportaciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitImportaciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportacionesContext importaciones() throws RecognitionException {
		ImportacionesContext _localctx = new ImportacionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importaciones);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(IMPORT);
			setState(127);
			path();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PathContext extends ParserRuleContext {
		public NombreArchivoContext nombreArchivo() {
			return getRuleContext(NombreArchivoContext.class,0);
		}
		public List<RutaCarpetasContext> rutaCarpetas() {
			return getRuleContexts(RutaCarpetasContext.class);
		}
		public RutaCarpetasContext rutaCarpetas(int i) {
			return getRuleContext(RutaCarpetasContext.class,i);
		}
		public PathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_path; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterPath(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitPath(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitPath(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PathContext path() throws RecognitionException {
		PathContext _localctx = new PathContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_path);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(129);
					rutaCarpetas();
					setState(130);
					match(T__0);
					}
					} 
				}
				setState(136);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(137);
			nombreArchivo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RutaCarpetasContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PigLatinParser.ID, 0); }
		public RutaCarpetasContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rutaCarpetas; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterRutaCarpetas(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitRutaCarpetas(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitRutaCarpetas(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RutaCarpetasContext rutaCarpetas() throws RecognitionException {
		RutaCarpetasContext _localctx = new RutaCarpetasContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_rutaCarpetas);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NombreArchivoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(PigLatinParser.ID, 0); }
		public ExtensionArchivoContext extensionArchivo() {
			return getRuleContext(ExtensionArchivoContext.class,0);
		}
		public NombreArchivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nombreArchivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterNombreArchivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitNombreArchivo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitNombreArchivo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NombreArchivoContext nombreArchivo() throws RecognitionException {
		NombreArchivoContext _localctx = new NombreArchivoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_nombreArchivo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(ID);
			setState(142);
			extensionArchivo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExtensionArchivoContext extends ParserRuleContext {
		public ExtensionArchivoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extensionArchivo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterExtensionArchivo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitExtensionArchivo(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitExtensionArchivo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExtensionArchivoContext extensionArchivo() throws RecognitionException {
		ExtensionArchivoContext _localctx = new ExtensionArchivoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_extensionArchivo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			_la = _input.LA(1);
			if ( !(_la==T__1 || _la==T__2) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefVariableContext extends ParserRuleContext {
		public TerminalNode VARIABILES() { return getToken(PigLatinParser.VARIABILES, 0); }
		public TerminalNode MAYOR_QUE() { return getToken(PigLatinParser.MAYOR_QUE, 0); }
		public ListaDeclaracionContext listaDeclaracion() {
			return getRuleContext(ListaDeclaracionContext.class,0);
		}
		public DefVariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defVariable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterDefVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitDefVariable(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitDefVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefVariableContext defVariable() throws RecognitionException {
		DefVariableContext _localctx = new DefVariableContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_defVariable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(VARIABILES);
			setState(147);
			match(MAYOR_QUE);
			setState(148);
			listaDeclaracion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListaDeclaracionContext extends ParserRuleContext {
		public List<DeclaracionVariableContext> declaracionVariable() {
			return getRuleContexts(DeclaracionVariableContext.class);
		}
		public DeclaracionVariableContext declaracionVariable(int i) {
			return getRuleContext(DeclaracionVariableContext.class,i);
		}
		public ListaDeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listaDeclaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).enterListaDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PigLatinListener ) ((PigLatinListener)listener).exitListaDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PigLatinVisitor ) return ((PigLatinVisitor<? extends T>)visitor).visitListaDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListaDeclaracionContext listaDeclaracion() throws RecognitionException {
		ListaDeclaracionContext _localctx = new ListaDeclaracionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listaDeclaracion);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230376152498176L) != 0)) {
				{
				{
				setState(150);
				declaracionVariable();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
